MMT-1033: Added fix for spacing on line below Manage Collections

--- a/app/assets/stylesheets/components/_navigation.scss
+++ b/app/assets/stylesheets/components/_navigation.scss
@@ -12,7 +12,7 @@ nav {
     float: left;
     font-size: 1em;
     text-transform: uppercase;
-    padding: 0.8em 0 1em 0;
+    padding: 1em 0 1em 0;
     margin: 0.8em 3em 0 0;
     border-bottom: 0;
 
